--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memorygame",
   "version": "1.0.0",
-  "description": "Memory Game",
+  "description": "Memory Game with fruits cards",
   "author": "Laurie Ghione",
   "license": "MIT",
   "scripts": {
@@ -11,7 +11,7 @@
     "body-parser": "1.19.0",
     "browser-sync": "2.26.12",
     "browserify": "16.5.2",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "del": "5.1.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
